# serializer version: 1
# name: test_binary_sensors[event0-binary_sensor.name_daynight_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'light',
      'friendly_name': 'name DayNight 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_daynight_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event0-daynight_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'light',
      'friendly_name': 'name DayNight 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_daynight_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event1-binary_sensor.name_sound_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'sound',
      'friendly_name': 'name Sound 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_sound_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[event1-sound_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'sound',
      'friendly_name': 'name Sound 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_sound_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[event10-binary_sensor.name_object_analytics_device1scenario8]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name Object Analytics Device1Scenario8',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_object_analytics_device1scenario8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event10-object_analytics_device1scenario8]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name Object Analytics Device1Scenario8',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_object_analytics_device1scenario8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event2-binary_sensor.name_pir_sensor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'name PIR sensor',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_pir_sensor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[event2-pir_sensor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'name PIR sensor',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_pir_sensor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[event3-binary_sensor.name_pir_0]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name PIR 0',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_pir_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[event3-pir_0]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name PIR 0',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_pir_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[event4-binary_sensor.name_fence_guard_profile_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name Fence Guard Profile 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_fence_guard_profile_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event4-fence_guard_profile_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name Fence Guard Profile 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_fence_guard_profile_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event5-binary_sensor.name_motion_guard_profile_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name Motion Guard Profile 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_motion_guard_profile_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event5-motion_guard_profile_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name Motion Guard Profile 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_motion_guard_profile_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event6-binary_sensor.name_loitering_guard_profile_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name Loitering Guard Profile 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_loitering_guard_profile_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event6-loitering_guard_profile_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name Loitering Guard Profile 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_loitering_guard_profile_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event7-binary_sensor.name_vmd4_profile_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name VMD4 Profile 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_vmd4_profile_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event7-vmd4_profile_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name VMD4 Profile 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_vmd4_profile_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event8-binary_sensor.name_object_analytics_scenario_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name Object Analytics Scenario 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_object_analytics_scenario_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event8-object_analytics_scenario_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name Object Analytics Scenario 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_object_analytics_scenario_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event9-binary_sensor.name_vmd4_camera1profile9]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name VMD4 Camera1Profile9',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_vmd4_camera1profile9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[event9-vmd4_camera1profile9]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'name VMD4 Camera1Profile9',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.name_vmd4_camera1profile9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
